--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todo-app-react",
+  "name": "ask-movie",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://tolgakurtulus.github.io/React-Ask-Movie",
